# embedded-project-template

./: README.md
laser-tag/: CMakeLists.txt
laser-tag-v2/: platformio.ini
laser-tag-v2/src/: led.cpp  led.h  main.cpp
laser-tag-v2/test/test_embedded/: test_example.cpp
laser-tag/src/: CMakeLists.txt  configuration.h  game.cpp  interrupts.cpp  interrupts.h  irCommsFunctions.cpp  irCommsFunctions.h  main.cpp  sensorTasks.cpp  sensorTasks.h
laser-tag/test/: CMakeLists.txt  testParseResults.cpp
